fixed overlapping tasks

--- a/frontend/src/components/HomePage/home.css
+++ b/frontend/src/components/HomePage/home.css
@@ -118,6 +118,7 @@ button.update.list {
 /* Styling for tasks */
 .task.container {
     margin-left: 30px;
+    padding-bottom: 50px;
     width: 700px;
     min-height: 300px;
     height: fit-content;
@@ -153,7 +154,10 @@ button.update.list {
     flex-direction: row;
     justify-content: space-between;
     margin: 10px;
+    height: 30px;
+    flex-wrap: wrap;
 }
+
 .task-item {
     margin-left: 10px;
     margin-right: 10px;
@@ -164,13 +168,15 @@ button.update.list {
 
 
 form.add-task {
-    position:absolute;
-    bottom: 0;
+    align-self: flex-end;
     margin: 10px 20px;
+    height: 30px;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    position: absolute;
+    bottom: 0;
 }
 
 
